AlgoritmiaParser.py
# Generated from Algoritmia.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing import TextIO


class AlgoritmiaParser ( Parser ):

    grammarFileName = "Algoritmia.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'if'", "'else'", "'while'", 
                     "'<-'", "'<?>'", "'<w>'", "'(:)'", "'<<'", "'8<'", 
                     "'#'", "'|:'", "':|'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'='", "'/='", "'<'", "'<='", "'>'", "'>='", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "IF", "ELSE", 
                      "WHILE", "ASSIGN", "READ", "WRITE", "PLAY", "APPEND", 
                      "CUT", "LENGTH", "PROC_START", "PROC_END", "PLUS", 
                      "MINUS", "MULT", "DIV", "MOD", "EQ", "NEQ", "LT", 
                      "LTE", "GT", "GTE", "NOTE", "ID", "INT", "STRING", 
                      "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMENT", 
                      "NEWLINE", "WS" ]

    RULE_program = 0
    RULE_procDecl = 1
    RULE_statement = 2
    RULE_ifStmt = 3
    RULE_whileStmt = 4
    RULE_assignStmt = 5
    RULE_readStmt = 6
    RULE_writeStmt = 7
    RULE_playStmt = 8
    RULE_procCallStmt = 9
    RULE_listAppendStmt = 10
    RULE_listCutStmt = 11
    RULE_expression = 12
    RULE_relExpr = 13
    RULE_addExpr = 14
    RULE_multExpr = 15
    RULE_term = 16
    RULE_listLiteral = 17
    RULE_listAccessExpr = 18
    RULE_lengthExpr = 19

    ruleNames =  [ "program", "procDecl", "statement", "ifStmt", "whileStmt", 
                   "assignStmt", "readStmt", "writeStmt", "playStmt", "procCallStmt", 
                   "listAppendStmt", "listCutStmt", "expression", "relExpr", 
                   "addExpr", "multExpr", "term", "listLiteral", "listAccessExpr", 
                   "lengthExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    IF=3
    ELSE=4
    WHILE=5
    ASSIGN=6
    READ=7
    WRITE=8
    PLAY=9
    APPEND=10
    CUT=11
    LENGTH=12
    PROC_START=13
    PROC_END=14
    PLUS=15
    MINUS=16
    MULT=17
    DIV=18
    MOD=19
    EQ=20
    NEQ=21
    LT=22
    LTE=23
    GT=24
    GTE=25
    NOTE=26
    ID=27
    INT=28
    STRING=29
    LBRACE=30
    RBRACE=31
    LBRACK=32
    RBRACK=33
    COMMENT=34
    NEWLINE=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def procDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ProcDeclContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ProcDeclContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NEWLINE)
            else:
                return self.getToken(AlgoritmiaParser.NEWLINE, i)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AlgoritmiaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27 or _la==35:
                self.state = 42
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [27]:
                    self.state = 40
                    self.procDecl()
                    pass
                elif token in [35]:
                    self.state = 41
                    self.match(AlgoritmiaParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 46
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 47
            self.match(AlgoritmiaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.ID)
            else:
                return self.getToken(AlgoritmiaParser.ID, i)

        def PROC_START(self):
            return self.getToken(AlgoritmiaParser.PROC_START, 0)

        def PROC_END(self):
            return self.getToken(AlgoritmiaParser.PROC_END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.StatementContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NEWLINE)
            else:
                return self.getToken(AlgoritmiaParser.NEWLINE, i)

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcDecl" ):
                listener.enterProcDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcDecl" ):
                listener.exitProcDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcDecl" ):
                return visitor.visitProcDecl(self)
            else:
                return visitor.visitChildren(self)




    def procDecl(self):

        localctx = AlgoritmiaParser.ProcDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(AlgoritmiaParser.ID)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 50
                self.match(AlgoritmiaParser.ID)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 56
            self.match(AlgoritmiaParser.PROC_START)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34493959080) != 0):
                self.state = 59
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 5, 7, 8, 9, 11, 27]:
                    self.state = 57
                    self.statement()
                    pass
                elif token in [35]:
                    self.state = 58
                    self.match(AlgoritmiaParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self.match(AlgoritmiaParser.PROC_END)
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 65
                _la = self._input.LA(1)
                if not(_la==-1 or _la==35):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(AlgoritmiaParser.NEWLINE, 0)

        def assignStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.AssignStmtContext,0)


        def readStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ReadStmtContext,0)


        def writeStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.WriteStmtContext,0)


        def playStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.PlayStmtContext,0)


        def listAppendStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ListAppendStmtContext,0)


        def listCutStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ListCutStmtContext,0)


        def procCallStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ProcCallStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(AlgoritmiaParser.WhileStmtContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = AlgoritmiaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 81
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7, 8, 9, 11, 27]:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                if la_ == 1:
                    self.state = 68
                    self.assignStmt()
                    pass

                elif la_ == 2:
                    self.state = 69
                    self.readStmt()
                    pass

                elif la_ == 3:
                    self.state = 70
                    self.writeStmt()
                    pass

                elif la_ == 4:
                    self.state = 71
                    self.playStmt()
                    pass

                elif la_ == 5:
                    self.state = 72
                    self.listAppendStmt()
                    pass

                elif la_ == 6:
                    self.state = 73
                    self.listCutStmt()
                    pass

                elif la_ == 7:
                    self.state = 74
                    self.procCallStmt()
                    pass


                self.state = 77
                self.match(AlgoritmiaParser.NEWLINE)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 79
                self.ifStmt()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 80
                self.whileStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(AlgoritmiaParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def PROC_START(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.PROC_START)
            else:
                return self.getToken(AlgoritmiaParser.PROC_START, i)

        def PROC_END(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.PROC_END)
            else:
                return self.getToken(AlgoritmiaParser.PROC_END, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.StatementContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NEWLINE)
            else:
                return self.getToken(AlgoritmiaParser.NEWLINE, i)

        def ELSE(self):
            return self.getToken(AlgoritmiaParser.ELSE, 0)

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = AlgoritmiaParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(AlgoritmiaParser.IF)
            self.state = 84
            self.expression()
            self.state = 85
            self.match(AlgoritmiaParser.PROC_START)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34493959080) != 0):
                self.state = 88
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 5, 7, 8, 9, 11, 27]:
                    self.state = 86
                    self.statement()
                    pass
                elif token in [35]:
                    self.state = 87
                    self.match(AlgoritmiaParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 93
            self.match(AlgoritmiaParser.PROC_END)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 94
                self.match(AlgoritmiaParser.ELSE)
                self.state = 95
                self.match(AlgoritmiaParser.PROC_START)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34493959080) != 0):
                    self.state = 98
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [3, 5, 7, 8, 9, 11, 27]:
                        self.state = 96
                        self.statement()
                        pass
                    elif token in [35]:
                        self.state = 97
                        self.match(AlgoritmiaParser.NEWLINE)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 103
                self.match(AlgoritmiaParser.PROC_END)


            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 106
                _la = self._input.LA(1)
                if not(_la==-1 or _la==35):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(AlgoritmiaParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def PROC_START(self):
            return self.getToken(AlgoritmiaParser.PROC_START, 0)

        def PROC_END(self):
            return self.getToken(AlgoritmiaParser.PROC_END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.StatementContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.StatementContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(AlgoritmiaParser.NEWLINE)
            else:
                return self.getToken(AlgoritmiaParser.NEWLINE, i)

        def EOF(self):
            return self.getToken(AlgoritmiaParser.EOF, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = AlgoritmiaParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_whileStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(AlgoritmiaParser.WHILE)
            self.state = 110
            self.expression()
            self.state = 111
            self.match(AlgoritmiaParser.PROC_START)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 34493959080) != 0):
                self.state = 114
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [3, 5, 7, 8, 9, 11, 27]:
                    self.state = 112
                    self.statement()
                    pass
                elif token in [35]:
                    self.state = 113
                    self.match(AlgoritmiaParser.NEWLINE)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(AlgoritmiaParser.PROC_END)
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 120
                _la = self._input.LA(1)
                if not(_la==-1 or _la==35):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(AlgoritmiaParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_assignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignStmt(self):

        localctx = AlgoritmiaParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(AlgoritmiaParser.ID)
            self.state = 124
            self.match(AlgoritmiaParser.ASSIGN)
            self.state = 125
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def READ(self):
            return self.getToken(AlgoritmiaParser.READ, 0)

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_readStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)




    def readStmt(self):

        localctx = AlgoritmiaParser.ReadStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_readStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(AlgoritmiaParser.READ)
            self.state = 128
            self.match(AlgoritmiaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(AlgoritmiaParser.WRITE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_writeStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteStmt" ):
                listener.enterWriteStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteStmt" ):
                listener.exitWriteStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStmt" ):
                return visitor.visitWriteStmt(self)
            else:
                return visitor.visitChildren(self)




    def writeStmt(self):

        localctx = AlgoritmiaParser.WriteStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_writeStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(AlgoritmiaParser.WRITE)
            self.state = 131
            self.expression()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2080378882) != 0):
                self.state = 132
                self.expression()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLAY(self):
            return self.getToken(AlgoritmiaParser.PLAY, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_playStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlayStmt" ):
                listener.enterPlayStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlayStmt" ):
                listener.exitPlayStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlayStmt" ):
                return visitor.visitPlayStmt(self)
            else:
                return visitor.visitChildren(self)




    def playStmt(self):

        localctx = AlgoritmiaParser.PlayStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_playStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(AlgoritmiaParser.PLAY)
            self.state = 139
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcCallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AlgoritmiaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,i)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_procCallStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcCallStmt" ):
                listener.enterProcCallStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcCallStmt" ):
                listener.exitProcCallStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcCallStmt" ):
                return visitor.visitProcCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def procCallStmt(self):

        localctx = AlgoritmiaParser.ProcCallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_procCallStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(AlgoritmiaParser.ID)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2080378882) != 0):
                self.state = 142
                self.expression()
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListAppendStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AlgoritmiaParser.ID, 0)

        def APPEND(self):
            return self.getToken(AlgoritmiaParser.APPEND, 0)

        def expression(self):
            return self.getTypedRuleContext(AlgoritmiaParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AlgoritmiaParser.RULE_listAppendStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListAppendStmt" ):
                listener.enterListAppendStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListAppendStmt" ):
                listener.exitListAppendStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAppendStmt" ):
                return visitor.visitListAppendStmt(self)
            else:
                return visitor.visitChildren(self)




    def listAppendStmt(self):

        localctx = AlgoritmiaParser.ListAppendStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_listAppendStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(AlgoritmiaParser.ID)
            self.state = 149
            self.match(AlgoritmiaParser.APPEND)
            self.state = 150
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListCutStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CUT(self):
            return self.getToken(AlgoritmiaParser.CUT, 0)
